--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -93,7 +93,7 @@
     z-index: 2;
 }
 
-.button-container.visible {
+.button-container.visible:hover {
     opacity: 1;
     transform: translateY(0);
 }
